@@ -17,9 +17,6 @@ Test::ReportPrereqs.include[5] = CPAN::Meta::Validator
 [Prereqs]
 Dist::Zilla::Plugin::MetaResources = 4.300039 ; strict validation of license arrayref
 
-[Prereqs / DevelopRequires]
-Test::Warnings = 0
-
 [Test::CleanNamespaces]
 
 [MetaResources / additional]
