@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - now *properly* allowing unrecognized options (0.015)
 
 0.015     2014-09-06 07:46:34Z
           - now allowing unrecognized options, with a warning, rather than
